fix(minecraft): fixed deadlock in minecraft launcher and also now minecraft supports 1.8.9 too! feat(audio): Alsa compatible audio drivers!